Login, user/group associations, some basic views. PS putting things into multiple commits is for children and the weak of mind

--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -1,3 +1,17 @@
+@mixin bluebutton {
+  @include border-radius(5px);
+  background-color: #119EE7;
+  border: 1px solid #0099E6;
+  color: white;
+  display: inline-block;
+  padding: 5px 10px;
+
+  &:hover {
+    background-color: #08c;
+    text-decoration: none;
+  }
+}
+
 @mixin clearfix {
   // http://nicolasgallagher.com/micro-clearfix-hack/
   *zoom: 1;
