--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,16 +2,19 @@
 <html>
 <head>
   <title>Strmr | <%= yield(:title) %></title>
-  <%= stylesheet_link_tag "application", :media => "all" %>
+  <%= stylesheet_link_tag "strmr" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-  <%= yield %>
+  <div class="container">
+
+    <%= yield %>
+
+  </div>
 
   <%= javascript_include_tag "application" %>
-  <!-- TODO -->
-  <%# yield :javascript_includes %>
+  <%# yield :javascript_includes %><!-- FOR LATER -->
 
 </body>
 </html>
