--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -5,11 +5,12 @@
 
 
 form {
-  @include border-box;
-  @include clearfix;
-  background-color: white;
-  border: 1px solid $light-gray;
-  padding: 20px;
+  @include whitebox;
+  
+  .help-block {
+    color: darken($med-gray, 15);
+    margin: -5px 0 10px;
+  }
 
   label {
     display: inline-block;
@@ -18,7 +19,7 @@ form {
 
   input:not([type="submit"]) {
     @include border-box;
-    border: 1px solid $light-gray;
+    border: 1px solid $med-gray;
     margin-bottom: 15px;
     padding: 7px;
     width: 100%;
