--- a/app/assets/stylesheets/components/control_bar.scss
+++ b/app/assets/stylesheets/components/control_bar.scss
@@ -1,6 +1,7 @@
 #control-bar {
   margin: 0 auto;
-  background-color: yellow;
+  background-color: $gray-text;
+  color: white;
 
   .container {
     margin: 0 auto;
