--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,26 +7,15 @@
 </head>
 <body>
 
-  <% if signed_in? %>
-  <div id="control-bar">
-    <div class="container">test</div>
-  </div>
-  <% end %>
+  <%= render 'shared/control_bar' %>
 
   <div class="container">
 
     <%= yield %>
 
-    <div class="row">
-      <div class="span-16" style="text-align: center; margin-top: 50px;">
-        <span style="">(Temporary): </span>
-        <%= link_to "Log Out", logout_path %>
-      </div>
-    </div>
-
   </div>
 
-
+  <%= render 'shared/footer' %>
 
   <%= javascript_include_tag "application" %>
   <%# yield :javascript_includes %><!-- FOR LATER -->
