--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -32,6 +32,11 @@
   .group-title {
     color: $gray-text;
     font-size: 1.5em;
+
+    &:hover {
+      color: $blue;
+      text-decoration: none;
+    }
   }
 
   .group-owner {
