--- a/app/assets/stylesheets/lib/variables.scss
+++ b/app/assets/stylesheets/lib/variables.scss
@@ -1,5 +1,11 @@
-//$light-gray: #f9f9f9;
+$light-gray: #f9f9f9;
 $med-gray: #ccc;
 $gray-text: #404040;
 
 $blue: #119EE7;
+
+$light-red: #F2DEDE;
+$dark-red: #B94A48;
+
+$light-green: #ccc;
+$dark-green: #ccc;
