--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -29,7 +29,7 @@
           
             <%  if current_user == group.owner %>
 
-              <%= link_to "Edit", edit_group_path(group.gid), class: "btn btn-plain" %>
+              <%= link_to "Edit", edit_group_path(group.gid), class: "btn btn-light" %>
               <%= link_to "Delete", {action: 'destroy', id: group.gid }, {
                 :method => :delete, 
                 confirm: "Are you sure you want to delete this group? This action cannot be undone.", 
@@ -52,8 +52,8 @@
     </div>
 
     <div class="right">
-      <%= link_to "Create a new group", new_group_path, class: "btn btn-large" %>
-      <%= link_to "Join another group", join_group_path, class: "btn btn-large" %>
+      <%= link_to "Create a new group", new_group_path, class: "btn btn-blue btn-large" %>
+      <%= link_to "Join another group", join_group_path, class: "btn btn-blue btn-large" %>
     </div>
 
   </div>
