--- a/app/assets/stylesheets/components/buttons.scss
+++ b/app/assets/stylesheets/components/buttons.scss
@@ -1,15 +1,15 @@
 .btn {
-  // Dark gray w/ blue hover by default
-  @include border-radius(5px);
-  background-color: $gray-text;
-  border: 1px solid $dark-gray;
-  color: white;
+  // by default
+  @include border-radius(3px);
+  background-color: $light-gray;
+  border: 1px solid darken($med-gray, 5);
+  color: $blue;
   display: inline-block;
   padding: 6px 10px;
 
   &:hover {
-    background-color: $blue;
-    border-color: #0099E6;
+    background-color: lighten($blue, 45);
+    border-color: $blue;
     text-decoration: none;
   }
 
@@ -21,6 +21,7 @@
   &.btn-blue {
     background-color: $blue;
     border: 1px solid #0099E6;
+    color: white;
 
     &:hover {
       background-color: #08c;
@@ -28,28 +29,36 @@
   }
 
 
-  &.btn-light {
-    // Light gray
-    background-color: $light-gray;
-    border-color: darken($med-gray, 5);
-    color: lighten($gray-text, 15);
+  // &.btn-light {
+  //   // Light gray
+    
+
+  //   &:hover {
+      
+  //   }
+  // }
+
+  .btn-dark {
+    // Dark gray w/ blue hover
+    background-color: $gray-text;
+    border: 1px solid $dark-gray;
+    color: white;
 
     &:hover {
-      background-color: lighten($med-gray, 10);
-      border-color: lighten($gray-text, 40);
-      color: lighten($gray-text, 5);
+      background-color: $blue;
+      border-color: #0099E6;
     }
   }
 
 
   &.btn-red {
     // Danger!
-    background-color: $light-red;
+    background-color: $light-gray;
     border-color: lighten($dark-red, 20);
     color: $dark-red;
 
     &:hover {
-      background-color: darken($light-red, 5);
+      background-color: $light-red;
       border-color: lighten($dark-red, 10);
     }
   }
