--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -29,7 +29,7 @@
       <%= f.label :password %>                            
       <%= f.password_field :password %>
 
-      <%= submit_tag "Sign Up", class: "btn", id: "submit-signup" %>
+      <%= submit_tag "Sign Up", class: "btn btn-dark", id: "submit-signup" %>
 
     <% end %><!-- .signup-form -->
 
